--- a/src/scss/modules/SearchPartner.module.scss
+++ b/src/scss/modules/SearchPartner.module.scss
@@ -1,20 +1,22 @@
 .contentArea {
   composes: contentArea from "./common/contentArea.module.scss";
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
 }
 
-.inputArea {
-  width: 220px;
+
+.inputAreaDesc {
+  composes: inputAreaDesc from "./common/inputArea.module.scss";
 }
-.inputAreaResetType {
-  margin-top: 20px;
+.inputAreaName {
+  width: 230px;
 }
 
 
 .outputArea {
   composes: outputArea from "./common/outputArea.module.scss";
+  display: flex;
+  justify-content: center;
+  width: 800px;
+  margin: 30px auto 0;
 }
 .outputAreaList {
   composes: outputAreaList from "./common/outputArea.module.scss";
@@ -36,19 +38,10 @@
 }
 
 
-.typeIconList {
-  width: 1120px;
-  margin-top: 30px;
+.partnerText {
+  font-size: 2rem;
 }
-.typeIconListImg {
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  margin: 0 auto;
-  vertical-align: middle;
-  cursor: pointer;
-  &:hover {
-    background-size: contain;
-  }
+.partnerSubText {
+  font-weight: bold;
+  padding: 0 0.5rem;
 }
-
